Changed namespace to EasyMVC\HttpRequest

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-  "name": "rudymas/emvc_httprequest",
-  "description": "PHP class Emvc_HttpRequest for the EasyMVC Framework",
+  "name": "easymvc/httprequest",
+  "description": "PHP Class HttpRequest for the EasyMVC Framework",
   "version": "1.3.0",
   "type": "library",
   "license": "GPL-3.0",
@@ -19,7 +19,7 @@
   },
   "autoload": {
     "psr-4": {
-      "RudyMas\\Emvc_HttpRequest\\": "src/"
+      "EasyMVC\\HttpRequest\\": "src/"
     }
   }
 }
