--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
   ],
   "minimum-stability": "stable",
   "require": {
-    "php": ">= 7.2",
+    "php": "5.6.*",
     "guzzlehttp/guzzle": "^6"
   },
   "autoload": {
